Fixes navigation alignment, overlapping basket.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -80,10 +80,9 @@ body {
         float: none;
         position: relative;
         min-height: 40px;
-        width: 90%;
+        width: 70%;
         margin: 0;
         @media only screen and (min-width: 1140px) {
-            width: 960px;
             margin: 0 auto;
         }
         @media @tablet {
